<resources>
    <string name="app_name">MambaFinal</string>
    <string name="phone">Phone</string>
    <string name="i_m_admin">I\'m Admin</string>
    <string name="i_m_not_admin">I\'m not Admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="forum">Forum</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_profile">Change Profile</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="add_to_cart">add to cart</string>
    <string name="product_name">Product Name</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="location_details">Location Details</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="address_city">Address, City</string>
    <string name="total_price">Total Price</string>
    <string name="view_order">View Order</string>
    <string name="date_time">Date Time</string>
    <string name="client_orders">Client Orders</string>
    <string name="location_amp_payment_details"><![CDATA[Location & Payment details]]></string>
    <string name="view_orders">View Orders</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="are_you_a_supplier_register_as_supplier">Are you a Supplier? Register as Supplier</string>
</resources>