<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/username"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Phone number"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_user_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="208dp"
            android:layout_marginRight="208dp"
            android:text="@string/total_price"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_phone_number"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/address_city"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_total_price"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:gravity="center_horizontal"
            android:text="@string/date_time"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="UnknownId" />

        <Button
            android:id="@+id/view_order_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/order_date_time"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rectangle_70"
            android:fontFamily="@font/montserrat"
            android:text="@string/view_order"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</RelativeLayout>