<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.SettingsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/close_settings"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/ic_close"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>
                <Button
                    android:id="@+id/update_settings"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/ic_update"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_person"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/settings_text"
        android:hint="@string/phone_number"
        android:padding="20dp"
        android:inputType="number"
        android:textColorHint="@color/green"
        android:layout_margin="15dp"
        android:background="@drawable/rect12"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/settings_phone_number"
        android:layout_marginTop="10sp"
        android:hint="@string/full_name"
        android:padding="20dp"
        android:inputType="text"
        android:textColorHint="@color/green"
        android:layout_margin="15dp"
        android:background="@drawable/rect12"
        android:autofillHints="" />
    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="20dp"
        android:layout_below="@+id/settings_full_name"
        android:layout_marginTop="10sp"
        android:hint="@string/address"
        android:textColorHint="@color/green"
        android:layout_margin="15dp"
        android:background="@drawable/rect12"
        android:autofillHints=""
        android:inputType="textMultiLine" />
    <Button
        android:id="@+id/security_qtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="Set Security Questions"
        android:textColor="#FFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_address"
        android:background="@drawable/rectbutton" />

</RelativeLayout>