<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Client.ProductdetailsActivity">

    <RelativeLayout
        android:id="@+id/rel20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect02"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_arrowback"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Details"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/products_image_details"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_below="@+id/backBtn"
            android:scaleType="fitCenter"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/details_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/products_image_details"
            android:layout_marginTop="30dp"
            android:text="@string/product_name"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:contentPadding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/quantity"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold" />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/details_elegant"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    app:finalNumber="10"
                    app:initialNumber="1">

                </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/price"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/price"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Description"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"/>


                <TextView
                    android:id="@+id/details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/description"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:layout_marginStart="20dp" />
            </TableRow>

        </TableLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/details_add_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="Add to Cart"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/colorPrimary"
        android:minWidth="120dp"  />

</LinearLayout>